// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows collapsed 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="headerRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <div
          data-slot="sidebar.toggle.badge"
          style="display: contents;"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-content="47b5e433"
        fill="none"
        height="16"
        stroke-width="1"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.personal"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders Windows caption controls in expanded and collapsed states > windows expanded 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="headerRow"
    >
      <div
        class="modeSeat wide"
      >
        <div
          data-slot="sidebar.mode"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-content="47b5e433"
        fill="none"
        height="14"
        stroke-width="1.3"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.personal"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root fading quietBars"
    style="width: 300px;"
  >
    <div
      class="headerRow"
    >
      <div
        class="modeSeat wide"
      >
        <div
          data-slot="sidebar.mode"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-content="47b5e433"
        fill="none"
        height="14"
        stroke-width="1.3"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.personal"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (mode selector, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="headerRow"
    >
      <div
        class="modeSeat wide"
      >
        <div
          data-slot="sidebar.mode"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-content="47b5e433"
        fill="none"
        height="14"
        stroke-width="1.3"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.personal"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="headerRow"
    >
      <div
        class="modeSeat wide"
      >
        <div
          data-slot="sidebar.mode"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="panelIcon"
          data-content="88020f34"
          fill="none"
          height="16"
          stroke-width="1"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        aria-hidden="true"
        data-content="47b5e433"
        fill="none"
        height="14"
        stroke-width="1.3"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.personal"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
